--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,12 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: black;
+  color: white;
 }
 
 #game {
@@ -23,4 +29,16 @@ time, mark, audio, video {
 #game canvas {
   width: min(100vw, 100vh);
   height: min(100vw, 100vh);
+  margin: 0 auto;
+}
+
+#log {
+  position: fixed;
+  bottom: 0;
+  padding: 1rem;
+  width: 100%;
+  max-height: 20rem;
+  overflow: scroll;
+  opacity: 0.8;
+  text-shadow: 2px 2px black;
 }
