--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,14 @@ time, mark, audio, video {
 }
 
 body {
-  background-color: black;
+  background-color: blueviolet;
   color: white;
   overflow: hidden;
 }
 
 
 #canvas {
+  display: block;
   width: min(100vw, 100vh);
   height: min(100vw, 100vh);
   margin: 0 auto;
