--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ time, mark, audio, video {
 }
 
 body {
-  background-color: orangered;
+  background-color: seagreen;
   color: white;
   overflow: hidden;
 }
