--- a/src/style.css
+++ b/src/style.css
@@ -50,3 +50,15 @@ body {
   left: 0;
   z-index: 1;
 }
+
+a {
+  color: white;
+}
+
+#devLog {
+  font-size: 2rem;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
