--- a/src/style.css
+++ b/src/style.css
@@ -33,14 +33,20 @@ a {
   color: white;
 }
 
-.topLeft {
+.top {
   top: 0;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.left {
   left: 0;
 }
 
-.bottomLeft {
-  bottom: 0;
-  left: 0;
+.right {
+  right: 0;
 }
 
 .fill {
