start creating my own UI framework

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,10 @@ button, input:not([type]), input[type=button], input[type=submit], input[type=te
   cursor: pointer;
 }
 
+.vh {
+  display: none;
+}
+
 .top {
   top: 0;
 }
