--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,10 @@ canvas {
   width: var(--canvas-size);
 }
 
+dialog[open] {
+  animation: unfold 0.8s;
+}
+
 .canvasShrinkwrap {
   height: var(--canvas-size);
   width: var(--canvas-size);
@@ -210,5 +214,17 @@ canvas {
 
   .z-init & {
     opacity: 1;
+  }
+}
+
+@keyframes unfold {
+  0% {
+    transform: scale(0, 0.1);
+  }
+  50% {
+    transform: scale(1, 0.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
