--- a/src/style.css
+++ b/src/style.css
@@ -257,3 +257,26 @@ ul {
     transform: scale(1);
   }
 }
+
+@keyframes bg-slide {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
+dialog[open]::backdrop {
+  background-image: linear-gradient(
+    45deg,
+    blue,
+    violet
+  );
+  opacity: 0.75;
+  animation: bg-slide 10s ease infinite;
+}
