--- a/src/marko/EntityInspector.marko
+++ b/src/marko/EntityInspector.marko
@@ -18,7 +18,7 @@ class {
 
 style {
   .entity-inspector {
-    font-family: system-ui, -apple-system, sans-serif;
+    color: #333;
   }
   
   .inspector-header {
