adjust font size

--- a/src/marko/EntityInspector.marko
+++ b/src/marko/EntityInspector.marko
@@ -100,8 +100,8 @@ style {
     border: 1px solid #ccc;
     padding: 8px;
     font-family: monospace;
-    font-size: 0.8rem;
     vertical-align: top;
+    font-size: calc(var(--font-size) / 2);
   }
   
   .inspector-cell-normal {
