--- a/src/ui/SplitPane.css
+++ b/src/ui/SplitPane.css
@@ -13,8 +13,10 @@
   flex: 1;
   min-width: 200px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding: 0;
 }
 
 .right-pane {
